test/tests/compiler/18_structures/invalid_parse/extra_credit/union_var_tag_paren.plx
type struc s (y: i32)

pub fn main(none) i32 {
    # can't parenthesize union tag
    var: union (s);

    return 0
}
